monitoring/modules/kubernetes/ingress-prometheus-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: ingress-prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.aws.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-stack-prometheu-prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
  - host: blackbox.aws.com
    http:
      paths:
      - backend:
          service:
            name: blackbox-exporter-prometheus-blackbox-exporter
            port:
              number: 9115
        path: /
        pathType: Prefix
  - host: grafana.aws.com
    http:
      paths:      
      - backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
